fix compilation for java 8